--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>El título del post</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+
 </head>
 <body>
     <h1>Aquí vamos a hacer un post</h1>
