cambios en html y css

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,14 @@
 
 </head>
 <body>
-    <h1>Aquí vamos a hacer un post</h1>
-    <p>Y este es el párrafo de inicio</p>
-</body>
+    <div id="container">
+        <div id="cabecera" > 
+            cabecera
+        </div>
+        <div id="post">
+                <h1>Aquí vamos a hacer un post</h1>
+                <p>Y este es el párrafo de inicio</p>
+        </div>
+    </div>
+   </body>
 </html>
