Finalizada la cabecera con color azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,8 @@
     <div id="container">
         
         <div id="cabecera" > 
-            cabecera
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
                 <h1>Aquí vamos a hacer un post</h1>
