--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
         <div id="post">
                 <h1>Aquí vamos a hacer un post</h1>
                 <p>Y este es el párrafo de inicio</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas.</p>
         </div>
     </div>
    </body>
