una version del hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
         
         <div id="cabecera" > 
-            Hyperblog super archi mega
+            Hyperblog super archi mega 2,0
             <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
